# blob-storage

./: Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
api-collection/Blob-storage/: Download_file.bru  Upload_file.bru  bruno.json  nodes.bru
docker/: Dockerfile.base  Dockerfile.coordinator  Dockerfile.storage_node
rfc/: storage-durability.md
scripts/: docker-build.sh  healthcheck.py  run_coordinator.py  run_storage_node.py
src/common/: config.py  exceptions.py  interfaces.py  redis_metadata_store.py  utils.py
src/coordinator/: api.py  blob_storage.py  coordinator.py  metadata_manager.py  node_manager.py  repair_manager.py  upload_manager.py
src/models/: schemas.py
src/storage_node/: api.py  node.py
